[package]
name = "mensa"
version = "0.3.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2021"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
termion = "1.5"
structopt = { version = "0.3", features = [ "wrap_help" ] }
dirs = "4.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"
date_time_parser = "0.1"
num_enum = "0.5"
regex = "1.5"
prettytable-rs = "0.8"
toml = "0.5"
