[package]
name = "mensa"
version = "0.4.1"
authors = ["Malte Tammena <malte.tammena@pm.me>"]
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/MalteT/mensa"

[package.metadata.nix]
build = true
toolchain = "nightly"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = [ "json", "blocking" ] }
serde = { version = "1", features = [ "derive" ] }
owo-colors = { version = "3.0", features = [ "supports-colors" ] }
terminal_size = "0.1"
structopt = { version = "0.3", features = [ "wrap_help" ] }
directories-next = "2.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"
date_time_parser = "0.1"
num_enum = "0.5"
regex = "1.5"
toml = "0.5"
textwrap = "0.14"
unicode-width = "0.1"
serde_plain = "1.0"
remain = "0.2"
strum = { version = "0.22", features = [ "derive" ] }
cacache = "9.0"
serde_json = "1.0"
itertools = "0.10"

[dev-dependencies]
temp-dir = "0.1"
httpmock = "0.6"
pretty_assertions = "1.0"
assert_cmd = "2.0"
